Bug 1141079 - Make jemalloc_config.c a C++ source file. r=ted

--HG--
rename : memory/build/jemalloc_config.c => memory/build/jemalloc_config.cpp